--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,10 +18,12 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Display Python version
       run: python -c "import sys; print(sys.version)"
-    - name: Install dependencies
+    - name: Install dependencies and build package
       run: |
         python -m pip install --upgrade pip
+        pip install setuptools wheel
         if [ -f test-requirements.txt ]; then pip install -r test-requirements.txt; fi
+        pip install .
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
